improved naming conventions for testcase classes and other locations

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>F:\NITESH\FREELANCE\FREELANCE COMPANY\VENTIVE\PROJECT\AUTOMATION\SHARED SCRIPT_ARCITECTURE\PORCHLIGHT_AUTOMATION_ARCHITECTURE\XML\Execute.xml</span>
+                    <span>C:\Users\jayge\Documents\GitHub\PorchlightgroupC2\XML\Execute.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,27 +102,27 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.Login_Application" hash-for-method="Close_Browser">Close_Browser</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.TC1_Login_Application" hash-for-method="Close_Browser">Close_Browser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.Login_Application" hash-for-method="Enter_Password">Enter_Password</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.TC1_Login_Application" hash-for-method="Enter_Password">Enter_Password</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.Login_Application" hash-for-method="Enter_UserName">Enter_UserName</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.TC1_Login_Application" hash-for-method="Enter_UserName">Enter_UserName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.Login_Application" hash-for-method="Login_Button">Login_Button</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.TC1_Login_Application" hash-for-method="Login_Button">Login_Button</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.Login_Application" hash-for-method="Open_URL">Open_URL</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Executable_Classes.TC1_Login_Application" hash-for-method="Open_URL">Open_URL</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -140,7 +140,7 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Executable_Classes.Login_Application</span>
+              <span class="class-name">Executable_Classes.TC1_Login_Application</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -183,7 +183,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\NITESH\FREELANCE\FREELANCE COMPANY\VENTIVE\PROJECT\AUTOMATION\SHARED SCRIPT_ARCITECTURE\PORCHLIGHT_AUTOMATION_ARCHITECTURE\XML\Execute.xml</span>
+            <span class="header-content">C:\Users\jayge\Documents\GitHub\PorchlightgroupC2\XML\Execute.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -193,7 +193,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Executable_Classes.Login_Application&quot;/&gt;
+      &lt;class name=&quot;Executable_Classes.TC1_Login_Application&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -236,29 +236,29 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Enter_UserName')
-data.setCell(0, 2, 'Executable_Classes.Login_Application')
-data.setCell(0, 3, 5409);
+data.setCell(0, 2, 'Executable_Classes.TC1_Login_Application')
+data.setCell(0, 3, 5658);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Enter_Password')
-data.setCell(1, 2, 'Executable_Classes.Login_Application')
-data.setCell(1, 3, 5172);
+data.setCell(1, 2, 'Executable_Classes.TC1_Login_Application')
+data.setCell(1, 3, 5270);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'Login_Button')
-data.setCell(2, 2, 'Executable_Classes.Login_Application')
-data.setCell(2, 3, 5123);
+data.setCell(2, 2, 'Executable_Classes.TC1_Login_Application')
+data.setCell(2, 3, 5207);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'Open_URL')
-data.setCell(3, 2, 'Executable_Classes.Login_Application')
-data.setCell(3, 3, 2155);
+data.setCell(3, 2, 'Executable_Classes.TC1_Login_Application')
+data.setCell(3, 3, 1760);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'Close_Browser')
-data.setCell(4, 2, 'Executable_Classes.Login_Application')
-data.setCell(4, 3, 1093);
+data.setCell(4, 2, 'Executable_Classes.TC1_Login_Application')
+data.setCell(4, 3, 1425);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -284,50 +284,50 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Executable_Classes.Login_Application</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Executable_Classes.TC1_Login_Application</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">OpenBrowser(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">GetData</span>
-                <span class="method-start">3968 ms</span>
+                <span class="method-start">4897 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Open_URL</span>
-                <span class="method-start">4379 ms</span>
+                <span class="method-start">5401 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">GetData</span>
-                <span class="method-start">6538 ms</span>
+                <span class="method-start">7168 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Enter_UserName</span>
-                <span class="method-start">6563 ms</span>
+                <span class="method-start">7202 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">GetData</span>
-                <span class="method-start">11972 ms</span>
+                <span class="method-start">12860 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Enter_Password</span>
-                <span class="method-start">11972 ms</span>
+                <span class="method-start">12875 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">GetData</span>
-                <span class="method-start">17144 ms</span>
+                <span class="method-start">18145 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Login_Button</span>
-                <span class="method-start">17144 ms</span>
+                <span class="method-start">18161 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">GetData</span>
-                <span class="method-start">22268 ms</span>
+                <span class="method-start">23376 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Close_Browser</span>
-                <span class="method-start">22280 ms</span>
+                <span class="method-start">23409 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
