--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Application.Close_Browser()[pri:6, instance:Executable_Classes.Login_Application@7d9d1a19]">Close_Browser</td> 
-  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:46</td>   <td>-10308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Application.Enter_Password()[pri:4, instance:Executable_Classes.Login_Application@7d9d1a19]">Enter_Password</td> 
-  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:40</td>   <td>-15717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Application.Enter_UserName()[pri:3, instance:Executable_Classes.Login_Application@7d9d1a19]">Enter_UserName</td> 
-  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:38</td>   <td>-18311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Application.GetData()[pri:0, instance:Executable_Classes.Login_Application@7d9d1a19]">&gt;&gt;GetData</td> 
-<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:40</td>   <td>-15742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Application.GetData()[pri:0, instance:Executable_Classes.Login_Application@7d9d1a19]">&gt;&gt;GetData</td> 
-<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:46</td>   <td>-10308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Application.GetData()[pri:0, instance:Executable_Classes.Login_Application@7d9d1a19]">&gt;&gt;GetData</td> 
-<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:51</td>   <td>-5136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Application.GetData()[pri:0, instance:Executable_Classes.Login_Application@7d9d1a19]">&gt;&gt;GetData</td> 
-<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:56</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Application.GetData()[pri:0, instance:Executable_Classes.Login_Application@7d9d1a19]">&gt;&gt;GetData</td> 
-<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:51</td>   <td>-5136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Application.Login_Button()[pri:5, instance:Executable_Classes.Login_Application@7d9d1a19]">Login_Button</td> 
-  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:34</td>   <td>-22280</td> <td>&nbsp;</td><td title="&gt;&gt;Login_Application.OpenBrowser(java.lang.String)[pri:0, instance:Executable_Classes.Login_Application@7d9d1a19]">&gt;&gt;OpenBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/12/19 23:08:38</td>   <td>-17901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Application.Open_URL()[pri:2, instance:Executable_Classes.Login_Application@7d9d1a19]">Open_URL</td> 
-  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC1_Login_Application.Close_Browser()[pri:6, instance:Executable_Classes.TC1_Login_Application@5622fdf]">Close_Browser</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:15</td>   <td>-10533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC1_Login_Application.Enter_Password()[pri:4, instance:Executable_Classes.TC1_Login_Application@5622fdf]">Enter_Password</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:09</td>   <td>-16206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC1_Login_Application.Enter_UserName()[pri:3, instance:Executable_Classes.TC1_Login_Application@5622fdf]">Enter_UserName</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:07</td>   <td>-18511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC1_Login_Application.GetData()[pri:0, instance:Executable_Classes.TC1_Login_Application@5622fdf]">&gt;&gt;GetData</td> 
+<td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:09</td>   <td>-16240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC1_Login_Application.GetData()[pri:0, instance:Executable_Classes.TC1_Login_Application@5622fdf]">&gt;&gt;GetData</td> 
+<td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:15</td>   <td>-10548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC1_Login_Application.GetData()[pri:0, instance:Executable_Classes.TC1_Login_Application@5622fdf]">&gt;&gt;GetData</td> 
+<td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:20</td>   <td>-5263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC1_Login_Application.GetData()[pri:0, instance:Executable_Classes.TC1_Login_Application@5622fdf]">&gt;&gt;GetData</td> 
+<td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:25</td>   <td>-32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC1_Login_Application.GetData()[pri:0, instance:Executable_Classes.TC1_Login_Application@5622fdf]">&gt;&gt;GetData</td> 
+<td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:20</td>   <td>-5247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC1_Login_Application.Login_Button()[pri:5, instance:Executable_Classes.TC1_Login_Application@5622fdf]">Login_Button</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:02</td>   <td>-23392</td> <td>&nbsp;</td><td title="&gt;&gt;TC1_Login_Application.OpenBrowser(java.lang.String)[pri:0, instance:Executable_Classes.TC1_Login_Application@5622fdf]">&gt;&gt;OpenBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>18/12/24 19:09:07</td>   <td>-18007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC1_Login_Application.Open_URL()[pri:2, instance:Executable_Classes.TC1_Login_Application@5622fdf]">Open_URL</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
 </table>
